--- a/PSS/PSS/wwwroot/css/components/CollectionSelector.css
+++ b/PSS/PSS/wwwroot/css/components/CollectionSelector.css
@@ -122,12 +122,13 @@
 
 .collectionsList > .collection > .coverDiv {
     display: flex;
+    justify-content: center;
     width: 50px;
     height: 50px;
+    overflow: hidden;
 }
 
 .collectionsList > .collection > img {
-    object-fit: cover;
     width: 60px;
     height: 60px;
 }
